@@ -1,6 +1,6 @@
 /*[INCLUDE-IF Sidecar18-SE]*/
 /*******************************************************************************
- * Copyright (c) 2006, 2017 IBM Corp. and others
+ * Copyright (c) 2006, 2018 IBM Corp. and others
  *
  * This program and the accompanying materials are made available under
  * the terms of the Eclipse Public License 2.0 which accompanies this
@@ -233,7 +233,7 @@ public abstract class AbstractHashMap implements Serializable {
         }
 
         public Object nextElement() {
-            return new Long(nextInt());
+            return Long.valueOf(nextInt());
         }
 
         public long nextInt() {
