@@ -1,6 +1,6 @@
 /*[INCLUDE-IF Sidecar18-SE]*/
 /*******************************************************************************
- * Copyright (c) 2004, 2017 IBM Corp. and others
+ * Copyright (c) 2004, 2018 IBM Corp. and others
  *
  * This program and the accompanying materials are made available under
  * the terms of the Eclipse Public License 2.0 which accompanies this
@@ -55,7 +55,7 @@ public class ScrollCommand extends BaseJdmpviewCommand{
 		if(command.equals("-")) {
 			newMemAddrss = currentMemAddress.longValue() - currentNumBytesToPrint.intValue();
 		}
-		ctx.getProperties().put(Utils.CURRENT_MEM_ADDRESS, new Long(newMemAddrss));
+		ctx.getProperties().put(Utils.CURRENT_MEM_ADDRESS, Long.valueOf(newMemAddrss));
 		ctx.execute("hexdump", new String[]{Long.toHexString(newMemAddrss),currentNumBytesToPrint.toString()}, out);
 	}
 
